# toxic-comments-mlops

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  download_data.py  pyproject.toml
.dvc/: config
configs/: train.yaml
configs/data/: default.yaml
configs/infer/: default.yaml
configs/mlflow/: default.yaml
configs/model/: baseline.yaml  distilbert.yaml
data/raw/: train.csv.zip.dvc
scripts/: convert_tensorrt.sh
toxic_comments/: __init__.py  baseline.py  commands.py  data.py  distilbert_module.py  export_onnx.py  infer.py  metrics.py  plotting.py  train.py  utils.py
